--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,14 +1,44 @@
-name: Build sys-patch
+name: Build Project
 
 on:
+  workflow_dispatch:
   push:
     branches:
       - master
-      - feature-integration
-    paths-ignore:
-      - 'Dockerfile'
-      - '.github/workflows/image.yml'
 
 jobs:
-  build-workflow:
-    uses: ./.github/workflows/build-jobs.yaml
+  build:
+    runs-on: ubuntu-latest
+    container: devkitpro/devkita64
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          submodules: recursive
+
+      - name: Build
+        run: |
+          make -j$(nproc) dist
+          VERSION=$(grep 'export VERSION := ' Makefile | cut -c 19-)
+          echo "VERSION=${VERSION}" >> $GITHUB_ENV
+
+      - name: Upload artifact
+        uses: actions/upload-artifact@v4
+        with:
+          include-hidden-files: true
+          overwrite: true
+          name: sys-patch-${{ env.VERSION }}
+          path: out/
+
+      - name: Fetch git cli and upload release
+        env: 
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          wget -qO- https://github.com/cli/cli/releases/download/v2.83.1/gh_2.83.1_linux_amd64.tar.gz | tar -xz
+          mv gh_*/bin/gh /usr/local/bin/
+          if gh release view v${{ env.VERSION }} > /dev/null 2>&1; then
+            echo "Release v${{ env.VERSION }} already exists. Skipping."
+          else
+            gh release create v${{ env.VERSION }} sys-patch.zip --title "Sys-patch version ${{ env.VERSION }}" --repo $GITHUB_REPOSITORY
+          fi
